fix work page spacing

--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -72,7 +72,7 @@
 
 @media screen and (max-width: 768px) {
     .work {
-        padding-top: 20% 1% 1% 1%;
+        padding: 20% 2% 2% 2%;
     }
 
     .flowDesc {
@@ -88,9 +88,7 @@
     }
 
     .card {
-        margin: 0 auto;
+        margin: auto;
         width: 90%;
-        margin: 2%;
-        padding: 4%;
     }
 }
